--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cligj==0.7.2
 Fiona==1.9.1
 freetype-py==2.3.0
 geopandas==0.12.2
+joblib==1.2.0
 jsonschema==3.2.0
 lark==0.11.3
 munch==2.5.0
@@ -18,5 +19,8 @@ pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2022.7.1
 PyYAML==5.4.1
+scikit-learn==1.2.2
+scipy==1.10.1
 shapely==2.0.1
 six==1.16.0
+threadpoolctl==3.1.0
