--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-attrs==21.2.0
+attrs==23.1.0
 certifi==2022.12.7
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
-Fiona==1.9.1
+Fiona==1.9.3
 freetype-py==2.3.0
 geopandas==0.12.2
 joblib==1.2.0
-jsonschema==3.2.0
-lark==0.11.3
+jsonschema==4.17.3
+lark==1.1.5
 munch==2.5.0
 numpy==1.24.2
-packaging==23.0
-pandas==1.5.3
-PyGeodesy==21.7.7
-pyproj==3.4.1
-pyrsistent==0.18.0
+packaging==23.1
+pandas==2.0.0
+pyproj==3.5.0
+pyrsistent==0.19.3
 python-dateutil==2.8.2
-pytz==2022.7.1
-PyYAML==5.4.1
+pytz==2023.3
+PyYAML==6.0
 scikit-learn==1.2.2
 scipy==1.10.1
 shapely==2.0.1
 six==1.16.0
 threadpoolctl==3.1.0
+tzdata==2023.3
