--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-attrs==23.1.0
-certifi==2022.12.7
-click==8.1.3
-click-plugins==1.1.1
-cligj==0.7.2
-Fiona==1.9.3
-freetype-py==2.3.0
-geopandas==0.12.2
-joblib==1.2.0
-jsonschema==4.17.3
-lark==1.1.5
-munch==2.5.0
-numpy==1.24.2
-packaging==23.1
-pandas==2.0.0
-pyproj==3.5.0
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-pytz==2023.3
-PyYAML==6.0
-scikit-learn==1.2.2
-scipy==1.10.1
-shapely==2.0.1
+attrs==23.2.0
+certifi==2024.7.4
+freetype-py==2.4.0
+geopandas==1.0.1
+joblib==1.4.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+lark==1.1.9
+numpy==2.0.0
+packaging==24.1
+pandas==2.2.2
+PyGeodesy==24.6.24
+pyogrio==0.9.0
+pyproj==3.6.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+rpds-py==0.18.1
+scikit-learn==1.5.1
+scipy==1.14.0
+setuptools==70.2.0
+shapely==2.0.4
 six==1.16.0
-threadpoolctl==3.1.0
-tzdata==2023.3
+threadpoolctl==3.5.0
+tzdata==2024.1
