--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-attrs==23.2.0
-certifi==2024.7.4
-freetype-py==2.4.0
+attrs==24.3.0
+certifi==2024.12.14
+freetype-py==2.5.1
 geopandas==1.0.1
 joblib==1.4.2
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-lark==1.1.9
-numpy==2.0.0
-packaging==24.1
-pandas==2.2.2
-PyGeodesy==24.6.24
-pyogrio==0.9.0
-pyproj==3.6.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+lark==1.2.2
+numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
+pygeodesy==25.1.9
+pyogrio==0.10.0
+pyproj==3.7.0
 python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.1
-referencing==0.35.1
-rpds-py==0.18.1
-scikit-learn==1.5.1
-scipy==1.14.0
-setuptools==70.2.0
-shapely==2.0.4
-six==1.16.0
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.36.1
+rpds-py==0.22.3
+scikit-learn==1.6.1
+scipy==1.15.1
+setuptools==75.8.0
+shapely==2.0.6
+six==1.17.0
 threadpoolctl==3.5.0
-tzdata==2024.1
+tzdata==2024.2
